feat: Add DocuSeal integration with document submission and template management
- Implemented a new HTML interface for DocuSeal integration, allowing users to create document submissions, manage templates, and monitor submissions.
- Created a client library (docuseal-client.js) to interact with Firebase Functions for submission and template management.
- Added functionality for creating submissions from existing templates or HTML content, including signer management and email notifications.
- Implemented template creation from HTML and PDF uploads, with support for form fields.
- Integrated a form builder for customizing document templates and a monitoring system for submission status.

--- a/.gitignore
+++ b/.gitignore
@@ -64,3 +64,12 @@ node_modules/
 
 # dotenv environment variables file
 .env
+
+# Firebase configuration files with sensitive data
+public/config/firebase-config.js
+**/firebase-config.js
+
+# Additional security files
+.env.local
+.env.production
+.env.development
