--- a/functions/package.json
+++ b/functions/package.json
@@ -7,20 +7,28 @@
     "shell": "firebase functions:shell",
     "start": "npm run shell",
     "deploy": "firebase deploy --only functions",
-    "logs": "firebase functions:log"
+    "logs": "firebase functions:log",
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage"
   },
   "engines": {
     "node": "20"
   },
   "main": "index.js",
   "dependencies": {
+    "axios": "^1.10.0",
+    "dotenv": "^16.6.0",
     "firebase-admin": "^12.7.0",
-    "firebase-functions": "^6.1.1"
+    "firebase-functions": "^6.1.1",
+    "jsonwebtoken": "^9.0.2"
   },
   "devDependencies": {
     "eslint": "^8.57.1",
     "eslint-config-google": "^0.14.0",
-    "firebase-functions-test": "^3.3.0"
+    "firebase-functions-test": "^3.3.0",
+    "jest": "^29.7.0",
+    "supertest": "^6.3.3"
   },
   "private": true,
   "version": "1.0.0",
